@@ -1,7 +1,8 @@
 Changes in @NEW@
-  o Client Changes:
+  o Bug Fixes:
     * When running "cvc log" on a newly created source component, cvc now
       errors gracefully instead of tracing back (bz #538).
+    * Conary now changes to / before running tag scripts. (bz #1134)
 
 Changes in 1.0.15
   o Client Changes:
